--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@angular/platform-browser-dynamic": "8.0.0",
     "@angular/router": "8.0.0",
     "boostrap": "2.0.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "4.3.1",
     "core-js": "2.6.9",
-    "jquery": "1.9.1 - 3",
+    "jquery": "3.4.1",
+    "ng2-cookies": "^1.0.12",
     "ngx-toastr": "11.2.1",
-    "popper.js": "^1.14.7",
+    "popper.js": "1.16.0",
     "rxjs": "6.5.2",
     "rxjs-compat": "6.5.3",
     "zone.js": "0.9.1"
