--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "2.6.9",
     "jquery": "3.4.1",
     "ng2-cookies": "^1.0.12",
+    "ngx-cookie-service": "^2.2.0",
     "ngx-toastr": "11.2.1",
     "popper.js": "1.16.0",
     "rxjs": "6.5.2",
