--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "popper.js": "1.16.0",
     "rxjs": "6.5.2",
     "rxjs-compat": "6.5.3",
+    "socket.io-client": "^2.3.0",
     "zone.js": "0.9.1"
   },
   "scripts": {
